--- a/walldrop/src/index.css
+++ b/walldrop/src/index.css
@@ -1,13 +1,39 @@
 /* index.css */
 body {
-  background-color: #1f1f1f;
+  background-image: radial-gradient(circle, #4a148c 40%, #880e4f 100%);
+  height: fit-content;
   margin: 0;
   padding: 0;
   font-family: Arial, sans-serif;
 }
 
+
+h1 {
+  font-size: 32px;
+  margin-bottom: 16px;
+  color: #ffffff;
+}
+
+h2 {
+  color: #d8d8d8;
+}
+
+h3 {
+  color: #d8d8d8;
+}
+
+button {
+  padding: 12px 24px;
+  font-size: 16px;
+  background-color: #4a148c;
+  color: #ffffff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
 .navbar {
-  background: linear-gradient(to right, #4a148c, #880e4f);
   color: #ffffff;
   display: flex;
   align-items: center;
@@ -47,34 +73,50 @@ body {
   background-color: #880e4f;
 }
 
+/* home */
 
 .home {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh; /* Set the height to cover the whole viewport */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;  
+  z-index: -1;
+  align-items: center;
+}
+
+.background-animation {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  background-image: radial-gradient(circle, #880e4f 20%, #4a148c 100%);
+  opacity: 0;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: #ffffff;
+  position: relative;
   text-align: center;
-  margin-top: 200px;
 }
 
 .home h1 {
-  -webkit-text-stroke: 2px rgb(39, 39, 39); 
-  color: white; 
+  font-size: 36px;
+  margin-bottom: 20px;
 }
 
-h1 {
-  font-size: 32px;
-  margin-bottom: 16px;
-  color: #ffffff;
-}
-
-h2 {
-  color: #d8d8d8;
-}
-
-h3 {
-  color: #d8d8d8;
-}
-
-button {
+.home button {
   padding: 12px 24px;
-  font-size: 16px;
+  font-size: 18px;
   background-color: #4a148c;
   color: #ffffff;
   border: none;
@@ -83,7 +125,56 @@ button {
   transition: background-color 0.3s ease;
 }
 
-button:hover {
+.home button:hover {
+  background-color: #880e4f;
+}
+
+/* About page */
+
+.about {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center; /* Center the content vertically */
+  min-height: 100vh; /* Set the minimum height to cover the whole viewport */
+}
+
+.about-content {
+  max-width: 600px;
+  margin: 0 auto;
+  color: #ffffff;
+  text-align: center; /* Center the content horizontally */
+}
+
+.about h1 {
+  font-size: 36px;
+  margin-bottom: 16px;
+}
+
+.about h2 {
+  font-size: 24px;
+  margin-top: 20px;
+  margin-bottom: 10px;
+}
+
+.about h3 {
+  font-size: 18px;
+  margin-top: 30px;
+  margin-bottom: 10px;
+}
+
+.about button {
+  padding: 12px 24px;
+  font-size: 18px;
+  background-color: #4a148c;
+  color: #ffffff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.about button:hover {
   background-color: #880e4f;
 }
 
@@ -105,7 +196,7 @@ button:hover {
 
 .wallpaper-card {
   padding: 10px;
-  background: linear-gradient(to right, #4a148c, #880e4f);
+  background: #5a5a5a;
   border-radius: 4px;
   box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.1);
   transition: box-shadow 0.3s ease;
@@ -202,9 +293,14 @@ button:hover {
 
 /* upload new wallpaper */
 .upload {
+  display: flex;
+  height: 100vh;
+  flex-direction: column;
   max-width: 400px;
   margin: 0 auto;
   text-align: center;
+  justify-content: center;
+  align-items: center;
   color: #ffffff;
 }
 .upload label {
@@ -242,9 +338,11 @@ button:hover {
 /* contact form */
 .contact {
   display: flex;
+  height: 100vh;
   flex-direction: column;
-  align-items: center;
   text-align: center;
+  justify-content: center;
+  align-items: center;
   color: #fff;
 }
 
@@ -257,6 +355,7 @@ button:hover {
 
 .contact-social img{
   width: 4rem;
+  padding: 5px;
 }
 
 .contact-form {
@@ -299,9 +398,10 @@ button:hover {
 
 .join-container {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  height: 80vh;
 }
 
 .join-form {
@@ -339,4 +439,22 @@ button {
 
 button:hover {
   background-color: #880e4f;
+}
+
+
+/* NotFound */
+
+.not-found {
+  text-align: center;
+  margin-top: 50px;
+}
+
+.not-found h2 {
+  font-size: 36px;
+  color: #f00;
+}
+
+.not-found p {
+  font-size: 18px;
+  color: #666;
 }
